--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Estilos básicos para el sitio */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -17,12 +17,10 @@ footer {
     margin: auto;
 }
 
-/* Ajustar márgenes entre secciones para mayor separación */
 section {
     margin-bottom: 70px;
 }
 
-/* Mejorar el diseño de los encabezados */
 h2 {
     font-size: 2.5rem;
     color: #007bff;
@@ -33,14 +31,14 @@ h2 {
     padding-bottom: 5px;
 }
 
-/* Estilizar los botones */
+
 button {
     border-radius: 5px;
     padding: 10px 20px;
     font-size: 1rem;
 }
 
-/* Mejorar el diseño de las tarjetas */
+
 .card {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -51,7 +49,7 @@ button {
     border-bottom: 2px solid #007bff;
 }
 
-/* Ajustar el diseño del formulario */
+
 form {
     background-color: #f8f9fa;
     padding: 20px;
@@ -68,19 +66,18 @@ form {
     overflow: hidden;
 }
 
-/* Ajustar el diseño de las leyendas del carrusel */
+
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.7); /* Aumentar la opacidad del fondo */
-    color: white; /* Asegurar que el texto sea blanco */
-    padding: 15px; /* Incrementar el padding para mayor legibilidad */
-    border-radius: 8px; /* Ajustar el borde redondeado */
-    bottom: 20px; /* Mantener la posición ajustada */
-    font-size: 1.1rem; /* Aumentar el tamaño de la fuente */
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white; 
+    padding: 15px; 
+    border-radius: 8px; 
+    font-size: 1.1rem; 
 }
 
-/* Cambiar el color de las flechas del carrusel a negro */
+
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-    background-color: black; /* Cambiar el color de las flechas a negro */
-    border-radius: 50%; /* Agregar un borde redondeado para mejor visibilidad */
+    background-color: black; 
+    border-radius: 50%; 
 }
